Parse total stopped time lines